samples/_failures_safe/1761184028_f9680d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e2cda63.c: In function ‘subtract_matrices’:
./samples/SAFE/__tmp_8e2cda63.c:131:9: error: expected expression at end of input
  131 |         for (
      |         ^~~
./samples/SAFE/__tmp_8e2cda63.c:131:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e2cda63.c:131:9: error: expected declaration or statement at end of input
